nohup.out
 * Serving Flask app 'backend'
 * Debug mode: off
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://192.168.3.41:5000
[33mPress CTRL+C to quit[0m
192.168.3.43 - - [28/Apr/2025 12:10:53] "OPTIONS /recommend HTTP/1.1" 200 -
192.168.3.43 - - [28/Apr/2025 12:10:53] "POST /recommend HTTP/1.1" 200 -
 * Serving Flask app 'backend'
 * Debug mode: off
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://192.168.3.41:5000
[33mPress CTRL+C to quit[0m
192.168.3.43 - - [28/Apr/2025 12:26:44] "OPTIONS /recommend HTTP/1.1" 200 -
192.168.3.43 - - [28/Apr/2025 12:26:44] "POST /recommend HTTP/1.1" 200 -
192.168.3.43 - - [28/Apr/2025 12:26:59] "OPTIONS /recommend HTTP/1.1" 200 -
192.168.3.43 - - [28/Apr/2025 12:26:59] "POST /recommend HTTP/1.1" 200 -
192.168.3.43 - - [28/Apr/2025 12:27:00] "POST /recommend HTTP/1.1" 200 -
192.168.3.43 - - [28/Apr/2025 12:27:01] "POST /recommend HTTP/1.1" 200 -
 * Serving Flask app 'backend'
 * Debug mode: off
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://192.168.3.41:5000
[33mPress CTRL+C to quit[0m
192.168.3.43 - - [28/Apr/2025 12:32:43] "OPTIONS /recommend HTTP/1.1" 200 -
192.168.3.43 - - [28/Apr/2025 12:32:43] "[35m[1mPOST /recommend HTTP/1.1[0m" 500 -
192.168.3.43 - - [28/Apr/2025 12:34:23] "OPTIONS /recommend HTTP/1.1" 200 -
192.168.3.43 - - [28/Apr/2025 12:34:23] "[35m[1mPOST /recommend HTTP/1.1[0m" 500 -
192.168.3.43 - - [28/Apr/2025 12:39:10] "OPTIONS /recommend HTTP/1.1" 200 -
192.168.3.43 - - [28/Apr/2025 12:39:10] "[35m[1mPOST /recommend HTTP/1.1[0m" 500 -
192.168.3.43 - - [28/Apr/2025 12:39:12] "[35m[1mPOST /recommend HTTP/1.1[0m" 500 -
192.168.3.41 - - [28/Apr/2025 12:41:40] "[31m[1mGET /recommend HTTP/1.1[0m" 405 -
127.0.0.1 - - [28/Apr/2025 15:13:47] "[35m[1mPOST /recommend HTTP/1.1[0m" 500 -
 * Serving Flask app 'backend'
 * Debug mode: off
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://192.168.3.41:5000
[33mPress CTRL+C to quit[0m
127.0.0.1 - - [28/Apr/2025 15:22:24] "[35m[1mPOST /recommend HTTP/1.1[0m" 500 -
 * Serving Flask app 'backend'
 * Debug mode: off
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://192.168.3.41:5000
[33mPress CTRL+C to quit[0m
127.0.0.1 - - [28/Apr/2025 15:26:09] "[35m[1mPOST /recommend HTTP/1.1[0m" 500 -
  File "/home/ps/CancerCure/backend.py", line 43
    'risk_level': risk_level,
                ^
SyntaxError: invalid syntax
  File "/home/ps/CancerCure/backend.py", line 43
    'risk_level': risk_level,
                ^
SyntaxError: invalid syntax
  File "/home/ps/CancerCure/backend.py", line 43
    'risk_level': risk_level,
                ^
SyntaxError: invalid syntax
 * Serving Flask app 'backend'
 * Debug mode: off
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://192.168.3.41:5000
[33mPress CTRL+C to quit[0m
127.0.0.1 - - [28/Apr/2025 15:49:14] "POST /recommend HTTP/1.1" 200 -
127.0.0.1 - - [28/Apr/2025 15:50:18] "POST /recommend HTTP/1.1" 200 -
127.0.0.1 - - [28/Apr/2025 15:52:43] "POST /recommend HTTP/1.1" 200 -
192.168.3.43 - - [28/Apr/2025 15:54:12] "OPTIONS /recommend HTTP/1.1" 200 -
192.168.3.43 - - [28/Apr/2025 15:54:12] "POST /recommend HTTP/1.1" 200 -
192.168.3.43 - - [28/Apr/2025 15:59:17] "OPTIONS /recommend HTTP/1.1" 200 -
192.168.3.43 - - [28/Apr/2025 15:59:17] "POST /recommend HTTP/1.1" 200 -
127.0.0.1 - - [28/Apr/2025 16:24:51] "[33mGET / HTTP/1.1[0m" 404 -
127.0.0.1 - - [28/Apr/2025 16:24:52] "[33mGET /favicon.ico HTTP/1.1[0m" 404 -
127.0.0.1 - - [28/Apr/2025 16:25:12] "[33mGET / HTTP/1.1[0m" 404 -
127.0.0.1 - - [28/Apr/2025 16:35:55] "[33mGET / HTTP/1.1[0m" 404 -
127.0.0.1 - - [28/Apr/2025 16:35:56] "[33mGET /favicon.ico HTTP/1.1[0m" 404 -
127.0.0.1 - - [28/Apr/2025 16:36:04] "[33mGET / HTTP/1.1[0m" 404 -
127.0.0.1 - - [28/Apr/2025 16:36:07] "[33mGET / HTTP/1.1[0m" 404 -
127.0.0.1 - - [28/Apr/2025 16:41:09] "OPTIONS /recommend HTTP/1.1" 200 -
127.0.0.1 - - [28/Apr/2025 16:41:09] "OPTIONS /recommend HTTP/1.1" 200 -
127.0.0.1 - - [28/Apr/2025 16:41:10] "POST /recommend HTTP/1.1" 200 -
127.0.0.1 - - [28/Apr/2025 16:41:10] "POST /recommend HTTP/1.1" 200 -
127.0.0.1 - - [28/Apr/2025 16:41:18] "OPTIONS /recommend HTTP/1.1" 200 -
127.0.0.1 - - [28/Apr/2025 16:41:19] "POST /recommend HTTP/1.1" 200 -
127.0.0.1 - - [28/Apr/2025 16:41:20] "POST /recommend HTTP/1.1" 200 -
127.0.0.1 - - [28/Apr/2025 16:41:21] "POST /recommend HTTP/1.1" 200 -
127.0.0.1 - - [28/Apr/2025 16:41:28] "OPTIONS /recommend HTTP/1.1" 200 -
127.0.0.1 - - [28/Apr/2025 16:41:29] "POST /recommend HTTP/1.1" 200 -
127.0.0.1 - - [28/Apr/2025 16:41:52] "OPTIONS /recommend HTTP/1.1" 200 -
127.0.0.1 - - [28/Apr/2025 16:41:53] "POST /recommend HTTP/1.1" 200 -
127.0.0.1 - - [28/Apr/2025 16:42:46] "[33mGET / HTTP/1.1[0m" 404 -
127.0.0.1 - - [28/Apr/2025 16:43:22] "[33mGET /:8080 HTTP/1.1[0m" 404 -
127.0.0.1 - - [28/Apr/2025 16:43:33] "[33mGET / HTTP/1.1[0m" 404 -
127.0.0.1 - - [28/Apr/2025 19:28:22] "[33mGET / HTTP/1.1[0m" 404 -
127.0.0.1 - - [28/Apr/2025 19:29:25] "[33mGET / HTTP/1.1[0m" 404 -
